dynamix/force-app/main/default/objects/Payment_Milestones__c/Payment_Milestones__c.object-meta.xml
<CustomObject>
    <label>Payment Milestones</label>
    <nameField>
        <label>Milestone name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>