dynamix/force-app/main/default/objects/Payment_Milestones__c/fields/Calculate_TDS__c.field-meta.xml
<CustomField>
    <fullName>Calculate_TDS__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Calculate TDS</label>
    <type>Checkbox</type>
</CustomField>