dynamix/force-app/main/default/objects/Payment_Milestones__c/fields/CGST_On_Milestone_Remining_Amount_Due__c.field-meta.xml
<CustomField>
    <fullName>CGST_On_Milestone_Remining_Amount_Due__c</fullName>
    <formula>Remaining_Amount__c * 2.5/100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CGST On Milestone Remining Amount Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>