dynamix/force-app/main/default/objects/Payment_Milestones__c/fields/Cheque_Bounce_Charges__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Bounce_Charges__c</fullName>
    <formula>Booking__r.Cheque_Bounced_Charges__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cheque Bounce Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>