dynamix/force-app/main/default/objects/Payment_Milestones__c/fields/Deletion_SAP_Exposed__c.field-meta.xml
<CustomField>
    <fullName>Deletion_SAP_Exposed__c</fullName>
    <label>Deletion SAP Exposed</label>
    <length>1</length>
    <type>Text</type>
</CustomField>