dynamix/force-app/main/default/objects/Payment_Milestones__c/fields/First_Payment_Email_Reminder_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Payment_Email_Reminder_Date__c</fullName>
    <formula>Due_Date__c+ 7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Payment Email Reminder Date</label>
    <type>Date</type>
</CustomField>