dynamix/force-app/main/default/objects/Payment_Milestones__c/fields/forth_Payment_Email_Reminder_Date__c.field-meta.xml
<CustomField>
    <fullName>forth_Payment_Email_Reminder_Date__c</fullName>
    <formula>Due_Date__c  +28</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>forth Payment Email Reminder Date</label>
    <type>Date</type>
</CustomField>