dynamix/force-app/main/default/objects/Payment_Milestones__c/fields/GST_Amount1__c.field-meta.xml
<CustomField>
    <fullName>GST_Amount1__c</fullName>
    <label>GST Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>