dynamix/force-app/main/default/objects/Payment_Milestones__c/fields/Gst_On_Total_Interest_Due__c.field-meta.xml
<CustomField>
    <fullName>Gst_On_Total_Interest_Due__c</fullName>
    <formula>Total_Interest_Due__c * 18/100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gst On Total Interest Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>