dynamix/force-app/main/default/objects/Payment_Milestones__c/fields/Interest_Amount__c.field-meta.xml
<CustomField>
    <fullName>Interest_Amount__c</fullName>
    <label>Interest Amount</label>
    <summarizedField>Interest_Charged__c.Interest_Amount__c</summarizedField>
    <summaryForeignKey>Interest_Charged__c.Milestone__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>