dynamix/force-app/main/default/objects/Payment_Milestones__c/fields/Interest_on_CGST_SGST__c.field-meta.xml
<CustomField>
    <fullName>Interest_on_CGST_SGST__c</fullName>
    <description>For milestone remining and total amount remining.</description>
    <formula>(CGST_On_Milestone_Remining_Amount_Due__c +  CGST_On_Total_Amount_Due__c + SGST_on_Milestone_Remining_Amount__c +  SGST_On_Total_Amount_Due__c ) * 18/100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interest on CGST/SGST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>