dynamix/force-app/main/default/objects/Payment_Milestones__c/fields/Interest_on_milestone_amount__c.field-meta.xml
<CustomField>
    <fullName>Interest_on_milestone_amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Interest on Milestone Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>