dynamix/force-app/main/default/objects/Payment_Milestones__c/fields/Interest_On_Remaining_GST_And_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Interest_On_Remaining_GST_And_Milestone__c</fullName>
    <formula>Remaining_Amount__c * 10.50/100 +  Remaining_GST__c * 18/100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interest On Remaining GST And Milestone</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>