dynamix/force-app/main/default/objects/Payment_Milestones__c/fields/Interest_on_Total_Amount_of_Milestones__c.field-meta.xml
<CustomField>
    <fullName>Interest_on_Total_Amount_of_Milestones__c</fullName>
    <formula>Total_Due_Amount_of_Milestones__c * 10.50/100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interest on Total Amount of Milestones</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>