dynamix/force-app/main/default/objects/Payment_Milestones__c/fields/Interest_Payment_Received__c.field-meta.xml
<CustomField>
    <fullName>Interest_Payment_Received__c</fullName>
    <label>Interest Payment Received</label>
    <summarizedField>Payment_Line__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Payment_Line__c.Payment_Category__c</field>
        <operation>equals</operation>
        <value>Interest</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Payment_Line__c.Payment_Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </summaryFilterItems>
    <summaryForeignKey>Payment_Line__c.Milestone__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>