dynamix/force-app/main/default/objects/Payment_Milestones__c/fields/Interest_Wave_Off_Amount__c.field-meta.xml
<CustomField>
    <fullName>Interest_Wave_Off_Amount__c</fullName>
    <label>Interest Wave Off Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>