dynamix/force-app/main/default/objects/Payment_Milestones__c/fields/Invoice_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Email_Sent__c</fullName>
    <formula>Mod (Today() - Project_Progress__r.Invoice_Date__c ,7)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Email Sent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>