dynamix/force-app/main/default/objects/Payment_Milestones__c/fields/Last_Amount_Due_Outstanding_Due__c.field-meta.xml
<CustomField>
    <fullName>Last_Amount_Due_Outstanding_Due__c</fullName>
    <formula>Booking__r.Total_Amount_Due__c -  Remaining_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Amount Due / Outstanding Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>