dynamix/force-app/main/default/objects/Payment_Milestones__c/fields/Letter_Email_Date__c.field-meta.xml
<CustomField>
    <fullName>Letter_Email_Date__c</fullName>
    <label>Letter/Email Date</label>
    <type>Date</type>
</CustomField>