dynamix/force-app/main/default/objects/Payment_Milestones__c/fields/Milestone_Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Activation_Date__c</fullName>
    <label>Milestone Activation Date</label>
    <type>Date</type>
</CustomField>