dynamix/force-app/main/default/objects/Payment_Milestones__c/fields/Milestone_age__c.field-meta.xml
<CustomField>
    <fullName>Milestone_age__c</fullName>
    <label>Milestone %</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>