dynamix/force-app/main/default/objects/Payment_Milestones__c/fields/Milestone_Amount__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Amount__c</fullName>
    <formula>Booking__r.Agreement_Value__c *  Milestone_age__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Milestone Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>