dynamix/force-app/main/default/objects/Payment_Milestones__c/fields/Milestone_Master__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Milestone Master</label>
    <referenceTo>Milestone_Master__c</referenceTo>
    <relationshipLabel>Payment Milestones</relationshipLabel>
    <relationshipName>Payment_Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>