dynamix/force-app/main/default/objects/Payment_Milestones__c/fields/Out_Standing_Amount_Milestone_Rpt__c.field-meta.xml
<CustomField>
    <fullName>Out_Standing_Amount_Milestone_Rpt__c</fullName>
    <formula>Remaining_Milestone_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Out Standing Amount (Milestone)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>