dynamix/force-app/main/default/objects/Payment_Milestones__c/fields/Payment_Received_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Payment_Received_Milestone__c</fullName>
    <formula>Milestone_Amount1__c -  Remaining_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Received Milestone</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>