dynamix/force-app/main/default/objects/Payment_Milestones__c/fields/Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>Payment_Term__c</fullName>
    <formula>Due_Date__c  -  Invoice_Date__c</formula>
    <label>Payment Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>