dynamix/force-app/main/default/objects/Payment_Milestones__c/fields/Payment_Term_Code__c.field-meta.xml
<CustomField>
    <fullName>Payment_Term_Code__c</fullName>
    <formula>IF(Payment_Term__c  &lt;= 7 &amp;&amp; Payment_Term__c &gt;= 0, &quot;Z007&quot;,  
IF(Payment_Term__c  &lt;= 15 &amp;&amp; Payment_Term__c &gt; 7, &quot;Z015&quot;,  
IF(Payment_Term__c  &lt;= 30 &amp;&amp; Payment_Term__c &gt; 15, &quot;Z030&quot;,  
IF(Payment_Term__c  &lt;= 45 &amp;&amp; Payment_Term__c &gt; 30, &quot;Z045&quot;,  
IF(Payment_Term__c  &lt;= 60 &amp;&amp; Payment_Term__c &gt; 45, &quot;Z060&quot;,  
IF(Payment_Term__c  &lt;= 75 &amp;&amp; Payment_Term__c &gt; 60, &quot;Z075&quot;,  
IF(Payment_Term__c  &lt;= 90 &amp;&amp; Payment_Term__c &gt; 75, &quot;Z090&quot;,  
IF(Payment_Term__c  &lt;= 120 &amp;&amp; Payment_Term__c &gt; 90, &quot;Z120&quot;, &quot;&quot;) 
) ) ) ) ) ) )</formula>
    <label>Payment Term Code</label>
    <type>Text</type>
</CustomField>