dynamix/force-app/main/default/objects/Payment_Milestones__c/fields/Primary_Applicant_Email__c.field-meta.xml
<CustomField>
    <fullName>Primary_Applicant_Email__c</fullName>
    <formula>Booking__r.Primary_Applicant__r.PersonContact.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Applicant Email</label>
    <type>Text</type>
</CustomField>