dynamix/force-app/main/default/objects/Payment_Milestones__c/fields/Primary_Applicant_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Applicant_Name__c</fullName>
    <formula>Booking__r.Primary_Applicant_Name_Formulla__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Applicant Name</label>
    <type>Text</type>
</CustomField>