dynamix/force-app/main/default/objects/Payment_Milestones__c/fields/Project_Phone__c.field-meta.xml
<CustomField>
    <fullName>Project_Phone__c</fullName>
    <formula>Booking__r.Project_Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Phone</label>
    <type>Text</type>
</CustomField>