dynamix/force-app/main/default/objects/Payment_Milestones__c/fields/Project_Progress__c.field-meta.xml
<CustomField>
    <fullName>Project_Progress__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Progress</label>
    <referenceTo>Project_Progress__c</referenceTo>
    <relationshipLabel>Payment Milestones</relationshipLabel>
    <relationshipName>Payment_Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>