dynamix/force-app/main/default/objects/Payment_Milestones__c/fields/Property_Name__c.field-meta.xml
<CustomField>
    <fullName>Property_Name__c</fullName>
    <formula>Booking__r.Related_Suggested_Property__r.Unit__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Name</label>
    <type>Text</type>
</CustomField>