dynamix/force-app/main/default/objects/Payment_Milestones__c/fields/Rate_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Rate_of_Interest__c</fullName>
    <label>Rate of Interest</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>