dynamix/force-app/main/default/objects/Payment_Milestones__c/fields/Relationship_Manager__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Manager__c</fullName>
    <formula>Booking__r.Owner:User.FirstName &amp; &apos; &apos; &amp; Booking__r.Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Relationship Manager</label>
    <type>Text</type>
</CustomField>