dynamix/force-app/main/default/objects/Payment_Milestones__c/fields/Remaining_GST1__c.field-meta.xml
<CustomField>
    <fullName>Remaining_GST1__c</fullName>
    <label>Remaining GST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>