dynamix/force-app/main/default/objects/Payment_Milestones__c/fields/Remaining_GST__c.field-meta.xml
<CustomField>
    <fullName>Remaining_GST__c</fullName>
    <formula>GST_Amount1__c - GST_Received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining GST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>