dynamix/force-app/main/default/objects/Payment_Milestones__c/fields/Remaining_Milestone_Amount__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Milestone_Amount__c</fullName>
    <label>Remaining Milestone Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>