dynamix/force-app/main/default/objects/Payment_Milestones__c/fields/Remaining_Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Unit_Cost__c</fullName>
    <label>Remaining Unit Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>