dynamix/force-app/main/default/objects/Payment_Milestones__c/fields/Second_Payment_Email_Reminder_Date__c.field-meta.xml
<CustomField>
    <fullName>Second_Payment_Email_Reminder_Date__c</fullName>
    <formula>Due_Date__c+ 14</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Second Payment Email Reminder Date</label>
    <type>Date</type>
</CustomField>