dynamix/force-app/main/default/objects/Payment_Milestones__c/fields/SGST_on_Milestone_Remining_Amount__c.field-meta.xml
<CustomField>
    <fullName>SGST_on_Milestone_Remining_Amount__c</fullName>
    <formula>Remaining_Amount__c * 2.5/100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SGST on Milestone Remining Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>