dynamix/force-app/main/default/objects/Payment_Milestones__c/fields/SGST_On_Total_Amount_Due__c.field-meta.xml
<CustomField>
    <fullName>SGST_On_Total_Amount_Due__c</fullName>
    <formula>Last_Amount_Due_Outstanding_Due__c * 2.5/100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SGST On Total Amount Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>