dynamix/force-app/main/default/objects/Payment_Milestones__c/fields/TDS_Due__c.field-meta.xml
<CustomField>
    <fullName>TDS_Due__c</fullName>
    <formula>TDS_Value__c  -  TDS_Received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TDS Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>