dynamix/force-app/main/default/objects/Payment_Milestones__c/fields/TDS_Value__c.field-meta.xml
<CustomField>
    <fullName>TDS_Value__c</fullName>
    <formula>IF( Calculate_TDS__c ==True, Milestone_Amount1__c  * 0.01, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TDS Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>