dynamix/force-app/main/default/objects/Payment_Milestones__c/fields/Third_Payment_Email_Reminder_Date__c.field-meta.xml
<CustomField>
    <fullName>Third_Payment_Email_Reminder_Date__c</fullName>
    <formula>Due_Date__c  + 21</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Third Payment Email Reminder Date</label>
    <type>Date</type>
</CustomField>