dynamix/force-app/main/default/objects/Payment_Milestones__c/fields/Total_Due_Amount_of_Milestones__c.field-meta.xml
<CustomField>
    <fullName>Total_Due_Amount_of_Milestones__c</fullName>
    <formula>Last_Amount_Due_Outstanding_Due__c +  Remaining_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Due Amount of Milestones</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>