dynamix/force-app/main/default/objects/Payment_Milestones__c/fields/Total_GST_on_Interest__c.field-meta.xml
<CustomField>
    <fullName>Total_GST_on_Interest__c</fullName>
    <formula>Total_Interest_Amount__c * 18/100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total GST on Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>