dynamix/force-app/main/default/objects/Payment_Milestones__c/fields/Total_Interest_Due__c.field-meta.xml
<CustomField>
    <fullName>Total_Interest_Due__c</fullName>
    <formula>Interest_on_Total_Amount_of_Milestones__c +  Interest_on_CGST_SGST__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Interest Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>