dynamix/force-app/main/default/objects/Payment_Milestones__c/fields/Total_Payable_Interest__c.field-meta.xml
<CustomField>
    <fullName>Total_Payable_Interest__c</fullName>
    <formula>Remaining_Amount__c +  Remaining_GST__c +  Interest_On_Remaining_GST_And_Milestone__c +  Total_GST_on_Interest__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Payable Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>