dynamix/force-app/main/default/objects/Payment_Milestones__c/fields/Tower_Name__c.field-meta.xml
<CustomField>
    <fullName>Tower_Name__c</fullName>
    <formula>Booking__r.Tower_Name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tower Name</label>
    <type>Text</type>
</CustomField>